--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,5 +17,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-    - name: Print hi
-      run: hi.py
+        pip install -r requirements.txt
+    - name: telebot_hi
+      run: telebot_hi.py
