--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,4 +1,4 @@
-name: check_hi
+name: telebot_check
 
 on: 
   schedule:
@@ -18,5 +18,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: telebot_hi
-      run: telebot_hi.py
+    - name: telebot_check
+      run: telebot_check.py
