--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,5 +16,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: telebot_check
-      run: telebot_check.py
+    - name: Run telebot_check
+      run: python telebot_check.py
