--- a/.github/workflows/check_5si.yml
+++ b/.github/workflows/check_5si.yml
@@ -19,4 +19,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: telebot_5si
-      run: python telebot_5si.py
+      run: python telebot_101.py
