--- a/.github/workflows/telebot_101.yml
+++ b/.github/workflows/telebot_101.yml
@@ -18,4 +18,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: telebot_101
-      run: python telebot_.py
+      run: python telebot_5.py
